# Mathepedia

./: index.html
Mathepedia/: package-lock.json  package.json
Mathepedia/src/: App.tsx
Mathepedia/src-tauri/: Cargo.toml  tauri.conf.json
Mathepedia/src-tauri/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
Mathepedia/src-tauri/src/: main.rs  models.rs  schema.rs
Mathepedia/src/components/: Mathsymbol.tsx  TextView.tsx  textview_style.css
MathepediaServer/: .gitignore  Cargo.toml
MathepediaServer/migrations/2024-03-07-210737_create_theorems/: down.sql  up.sql
MathepediaServer/src/: main.rs  models.rs
src/: main.tsx  styles.css
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
