[package]
name = "mathepedia_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4"
serde = "1.0.197"
serde_json = "1.0.114"
chrono = { version = "0.4.35", features = ["serde"] }
uuid = { version = "1.7", features = ["serde", "v4"] }
env_logger = "0.11.3"
